fixed sonarqube issues (#1)