@@ -3,7 +3,6 @@ package com.scimplayground.server.controller;
 import com.scimplayground.server.model.ScimGroup;
 import com.scimplayground.server.scim.error.ScimException;
 import com.scimplayground.server.scim.mapper.ScimGroupMapper;
-import com.scimplayground.server.security.WorkspaceContext;
 import com.scimplayground.server.service.ScimGroupService;
 import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.http.MediaType;
@@ -13,7 +12,6 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * SCIM 2.0 Groups endpoint per RFC 7644 §3.
@@ -21,9 +19,10 @@ import java.util.stream.Collectors;
 @RestController
 @RequestMapping({"/ws/{workspaceId}/scim/v2/Groups", "/ws/{workspaceId}/scim/v2/{compat}/Groups"})
 @Transactional
-public class ScimGroupController {
+public class ScimGroupController extends ScimBaseController {
 
     private static final MediaType SCIM_JSON = MediaType.parseMediaType("application/scim+json");
+    private static final String RESOURCE_GROUP = "Group";
 
     private final ScimGroupService groupService;
 
@@ -61,7 +60,7 @@ public class ScimGroupController {
             HttpServletRequest request) {
 
         UUID wsId = resolveWorkspaceId();
-        UUID gid = parseUUID(groupId, "Group");
+        UUID gid = parseUUID(groupId, RESOURCE_GROUP);
         String baseUrl = buildBaseUrl(request, workspaceId, compat);
 
         ScimGroup group = groupService.getGroup(wsId, gid);
@@ -105,7 +104,7 @@ public class ScimGroupController {
                     applyAttributeProjection(scimResp, attributes, excludedAttributes);
                     return scimResp;
                 })
-                .collect(Collectors.toList());
+                .toList();
         result.put("Resources", resources);
 
         return ResponseEntity.ok()
@@ -123,7 +122,7 @@ public class ScimGroupController {
             HttpServletRequest request) {
 
         UUID wsId = resolveWorkspaceId();
-        UUID gid = parseUUID(groupId, "Group");
+        UUID gid = parseUUID(groupId, RESOURCE_GROUP);
         
         // Validate If-Match header for optimistic concurrency control
         if (ifMatch != null) {
@@ -156,7 +155,7 @@ public class ScimGroupController {
             HttpServletRequest request) {
 
         UUID wsId = resolveWorkspaceId();
-        UUID gid = parseUUID(groupId, "Group");
+        UUID gid = parseUUID(groupId, RESOURCE_GROUP);
         
         // Validate If-Match header for optimistic concurrency control
         if (ifMatch != null) {
@@ -169,7 +168,7 @@ public class ScimGroupController {
         
         String baseUrl = buildBaseUrl(request, workspaceId, compat);
 
-        List<String> schemas = (List<String>) body.get("schemas");
+        List<String> schemas = (List<String>) body.get(KEY_SCHEMAS);
         if (schemas == null || !schemas.contains("urn:ietf:params:scim:api:messages:2.0:PatchOp")) {
             throw new ScimException(400, "invalidValue",
                     "PATCH request must include PatchOp schema");
@@ -196,77 +195,10 @@ public class ScimGroupController {
             @PathVariable(name = "compat", required = false) String compat) {
 
         UUID wsId = resolveWorkspaceId();
-        UUID gid = parseUUID(groupId, "Group");
+        UUID gid = parseUUID(groupId, RESOURCE_GROUP);
         groupService.deleteGroup(wsId, gid);
 
         return ResponseEntity.noContent().build();
     }
 
-    // ─── Helpers ────────────────────────────────────────────────────────
-
-    private UUID resolveWorkspaceId() {
-        var ws = WorkspaceContext.getWorkspace();
-        if (ws == null) throw new ScimException(401, null, "Unauthorized");
-        return ws.getId();
-    }
-
-    private UUID parseUUID(String value, String resourceType) {
-        try {
-            return UUID.fromString(value);
-        } catch (IllegalArgumentException e) {
-            throw new ScimException(404, null, resourceType + " not found: " + value);
-        }
-    }
-
-    private String buildBaseUrl(HttpServletRequest request, String workspaceId, String compat) {
-        String forwardedProto = request.getHeader("X-Forwarded-Proto");
-        String forwardedHost = request.getHeader("X-Forwarded-Host");
-        String forwardedPort = request.getHeader("X-Forwarded-Port");
-
-        String scheme = forwardedProto != null ? forwardedProto.split(",")[0].trim() : request.getScheme();
-        String host = forwardedHost != null ? forwardedHost.split(",")[0].trim() : request.getServerName();
-
-        int port = request.getServerPort();
-        if (forwardedPort != null) {
-            try {
-                port = Integer.parseInt(forwardedPort.split(",")[0].trim());
-            } catch (NumberFormatException ignored) {
-                // Fall back to server port when forwarded port is invalid.
-            }
-        }
-
-        String portStr = (port == 80 || port == 443 || host.contains(":")) ? "" : ":" + port;
-        String base = scheme + "://" + host + portStr + "/ws/" + workspaceId + "/scim/v2";
-        if (compat != null && !compat.isBlank()) {
-            return base + "/" + compat;
-        }
-        return base;
-    }
-
-    private void applyAttributeProjection(Map<String, Object> resource,
-                                           String attributes, String excludedAttributes) {
-        if (attributes != null && !attributes.isBlank()) {
-            Set<String> requested = parseAttrList(attributes);
-            requested.add("schemas");
-            requested.add("id");
-            requested.add("meta");
-            resource.keySet().retainAll(requested);
-        } else if (excludedAttributes != null && !excludedAttributes.isBlank()) {
-            Set<String> excluded = parseAttrList(excludedAttributes);
-            excluded.remove("schemas");
-            excluded.remove("id");
-            resource.keySet().removeAll(excluded);
-        }
-    }
-
-    private Set<String> parseAttrList(String attrList) {
-        Set<String> result = new LinkedHashSet<>();
-        for (String attr : attrList.split(",")) {
-            String trimmed = attr.trim();
-            if (!trimmed.isEmpty()) {
-                result.add(trimmed);
-            }
-        }
-        return result;
-    }
 }
