@@ -5,7 +5,6 @@ import com.scimplayground.server.scim.error.ScimException;
 import com.scimplayground.server.scim.compat.CompatMode;
 import com.scimplayground.server.scim.mapper.MsScimUserMapper;
 import com.scimplayground.server.scim.mapper.ScimUserMapper;
-import com.scimplayground.server.security.WorkspaceContext;
 import com.scimplayground.server.service.ScimUserService;
 import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.http.MediaType;
@@ -15,7 +14,6 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * SCIM 2.0 Users endpoint per RFC 7644 §3.
@@ -24,7 +22,7 @@ import java.util.stream.Collectors;
 @RestController
 @RequestMapping({"/ws/{workspaceId}/scim/v2/Users", "/ws/{workspaceId}/scim/v2/{compat}/Users"})
 @Transactional
-public class ScimUserController {
+public class ScimUserController extends ScimBaseController {
 
     private static final MediaType SCIM_JSON = MediaType.parseMediaType("application/scim+json");
 
@@ -52,7 +50,7 @@ public class ScimUserController {
         List<Map<String, Object>> groups = userService.getUserGroups(user.getId(), baseUrl);
         CompatMode compatMode = CompatMode.fromString(compat);
         Map<String, Object> scimResponse = ScimUserMapper.toScimResponse(user, compatBaseUrl, groups);
-        scimResponse = applyCompat(scimResponse, compatMode, false);
+        scimResponse = applyCompat(scimResponse, compatMode);
 
         return ResponseEntity.status(201)
                 .contentType(SCIM_JSON)
@@ -82,7 +80,7 @@ public class ScimUserController {
         List<Map<String, Object>> groups = userService.getUserGroups(user.getId(), baseUrl);
         CompatMode compatMode = CompatMode.fromString(compat);
         Map<String, Object> scimResponse = ScimUserMapper.toScimResponse(user, compatBaseUrl, groups);
-        scimResponse = applyCompat(scimResponse, compatMode, false);
+        scimResponse = applyCompat(scimResponse, compatMode);
 
         // Apply attribute projection
         applyAttributeProjection(scimResponse, attributes, excludedAttributes);
@@ -127,11 +125,11 @@ public class ScimUserController {
                 .map(u -> {
                     List<Map<String, Object>> groups = userService.getUserGroups(u.getId(), baseUrl);
                     Map<String, Object> scimResp = ScimUserMapper.toScimResponse(u, compatBaseUrl, groups);
-                    scimResp = applyCompat(scimResp, compatMode, true);
+                    scimResp = applyCompat(scimResp, compatMode);
                     applyAttributeProjection(scimResp, attributes, excludedAttributes);
                     return scimResp;
                 })
-                .collect(Collectors.toList());
+                .toList();
         result.put("Resources", resources);
 
         return ResponseEntity.ok()
@@ -169,7 +167,7 @@ public class ScimUserController {
         List<Map<String, Object>> groups = userService.getUserGroups(user.getId(), baseUrl);
         CompatMode compatMode = CompatMode.fromString(compat);
         Map<String, Object> scimResponse = ScimUserMapper.toScimResponse(user, compatBaseUrl, groups);
-        scimResponse = applyCompat(scimResponse, compatMode, false);
+        scimResponse = applyCompat(scimResponse, compatMode);
 
         return ResponseEntity.ok()
                 .contentType(SCIM_JSON)
@@ -206,7 +204,7 @@ public class ScimUserController {
         String compatBaseUrl = buildBaseUrl(request, workspaceId, compat);
 
         // Validate PATCH schema
-        List<String> schemas = (List<String>) body.get("schemas");
+        List<String> schemas = (List<String>) body.get(KEY_SCHEMAS);
         if (schemas == null || !schemas.contains("urn:ietf:params:scim:api:messages:2.0:PatchOp")) {
             throw new ScimException(400, "invalidValue",
                     "PATCH request must include PatchOp schema");
@@ -221,7 +219,7 @@ public class ScimUserController {
         List<Map<String, Object>> groups = userService.getUserGroups(user.getId(), baseUrl);
         CompatMode compatMode = CompatMode.fromString(compat);
         Map<String, Object> scimResponse = ScimUserMapper.toScimResponse(user, compatBaseUrl, groups);
-        scimResponse = applyCompat(scimResponse, compatMode, false);
+        scimResponse = applyCompat(scimResponse, compatMode);
 
         return ResponseEntity.ok()
                 .contentType(SCIM_JSON)
@@ -247,101 +245,10 @@ public class ScimUserController {
 
     // ─── Helpers ────────────────────────────────────────────────────────
 
-    private UUID resolveWorkspaceId() {
-        var ws = WorkspaceContext.getWorkspace();
-        if (ws == null) {
-            throw new ScimException(401, null, "Unauthorized");
-        }
-        return ws.getId();
-    }
-
-    private UUID parseUUID(String value, String resourceType) {
-        try {
-            return UUID.fromString(value);
-        } catch (IllegalArgumentException e) {
-            throw new ScimException(404, null, resourceType + " not found: " + value);
-        }
-    }
-
-    private String buildBaseUrl(HttpServletRequest request, String workspaceId) {
-        return buildBaseUrl(request, workspaceId, null);
-    }
-
-    private String buildBaseUrl(HttpServletRequest request, String workspaceId, String compat) {
-        String forwardedProto = request.getHeader("X-Forwarded-Proto");
-        String forwardedHost = request.getHeader("X-Forwarded-Host");
-        String forwardedPort = request.getHeader("X-Forwarded-Port");
-
-        String scheme = forwardedProto != null ? forwardedProto.split(",")[0].trim() : request.getScheme();
-        String host = forwardedHost != null ? forwardedHost.split(",")[0].trim() : request.getServerName();
-
-        int port = request.getServerPort();
-        if (forwardedPort != null) {
-            try {
-                port = Integer.parseInt(forwardedPort.split(",")[0].trim());
-            } catch (NumberFormatException ignored) {
-                // Fall back to server port when forwarded port is invalid.
-            }
-        }
-
-        String portStr = (port == 80 || port == 443 || host.contains(":")) ? "" : ":" + port;
-        String base = scheme + "://" + host + portStr + "/ws/" + workspaceId + "/scim/v2";
-        if (compat != null && !compat.isBlank()) {
-            return base + "/" + compat;
-        }
-        return base;
-    }
-
-    private Map<String, Object> applyCompat(Map<String, Object> scimResponse, CompatMode compatMode,
-                                            boolean listResponse) {
+    private Map<String, Object> applyCompat(Map<String, Object> scimResponse, CompatMode compatMode) {
         if (compatMode == CompatMode.MS) {
-            return MsScimUserMapper.toMsCompat(scimResponse, listResponse);
+            return MsScimUserMapper.toMsCompat(scimResponse);
         }
         return scimResponse;
-    }
-
-
-    /**
-     * Apply SCIM attributes/excludedAttributes projection.
-     * RFC 7644 §3.4.2.5 & §3.4.2.6
-     */
-    private void applyAttributeProjection(Map<String, Object> resource,
-                                           String attributes, String excludedAttributes) {
-        if (attributes != null && !attributes.isBlank()) {
-            Set<String> requested = parseAttrList(attributes);
-            // Always keep schemas, id, meta
-            requested.add("schemas");
-            requested.add("id");
-            requested.add("meta");
-            resource.keySet().retainAll(requested);
-        } else if (excludedAttributes != null && !excludedAttributes.isBlank()) {
-            Set<String> excluded = parseAttrList(excludedAttributes);
-            // Never exclude schemas, id
-            excluded.remove("schemas");
-            excluded.remove("id");
-            resource.keySet().removeAll(excluded);
-        }
-    }
-
-    private Set<String> parseAttrList(String attrList) {
-        Set<String> result = new LinkedHashSet<>();
-        for (String attr : attrList.split(",")) {
-            String trimmed = attr.trim();
-            if (!trimmed.isEmpty()) {
-                // Handle qualified names like urn:...User:userName → just use the last segment
-                if (trimmed.contains(":")) {
-                    // This is a fully qualified attribute
-                    // Keep it as-is for extension URN matching, but also add the short name
-                    result.add(trimmed);
-                    // For enterprise extension URN, add the extension key
-                    if (trimmed.startsWith("urn:")) {
-                        result.add(trimmed);
-                    }
-                } else {
-                    result.add(trimmed);
-                }
-            }
-        }
-        return result;
     }
 }
